# bark.cpp

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  Package.swift  README.md  bark-util.h  bark.cpp  bark.h  build-info.h  convert-bark-to-coreml.py  convert.py  convert_pt_to_ggml.py  convert_to_gguf.py  download_weights.py  encodec.cpp  encodec.h  ggml.c  ggml.h  quantize.cpp  requirements.txt  test-conv.cpp  util.h
.github/workflows/: build.yml  run.yml
assets/: audio1.webm  audio2.webm
bark/: CMakeLists.txt  bark.cpp  bark.h  convert.py  download_weights.py  requirements.txt
bark/examples/: CMakeLists.txt  common.cpp  common.h
bark/examples/main/: CMakeLists.txt  main.cpp
bark/examples/quantize/: main.cpp
bark/examples/server/: server.cpp
bark/tests/: CMakeLists.txt  common.cpp  common.h  test-coarse-encoder.cpp  test-fine-encoder.cpp  test-forward-semantic.cpp  test-tokenizer.cpp
coreml/: bark.h  bark.mm
examples/: CMakeLists.txt  common.cpp  common.h  main.cpp  toy.cpp
examples/bark.swiftui/: .gitignore  README.md
examples/bark.swiftui/bark.swiftui/: bark_swiftuiApp.swift
examples/bark.swiftui/bark.swiftui.xcodeproj/: project.pbxproj
examples/bark.swiftui/bark.swiftui.xcodeproj/project.xcworkspace/xcuserdata/pbannier.xcuserdatad/: UserInterfaceState.xcuserstate
examples/bark.swiftui/bark.swiftui/Bindings/: LibBark.swift  ProgressData.swift
examples/bark.swiftui/bark.swiftui/Models/: AudioPlayer.swift  BarkState.swift
examples/bark.swiftui/bark.swiftui/Views/: ContentView.swift
examples/bark.swiftui/bark_swift_package/: Package.swift  bark.cpp  encodec.cpp  ggml-alloc.c  ggml-backend.c  ggml.c
examples/bark.swiftui/bark_swift_package/include/: bark.h  encodec.h  ggml-alloc.h  ggml-backend.h  ggml.h
examples/bark_small/: CMakeLists.txt  bark_small.cpp  convert.py
examples/fast_text_encoder/: CMakeLists.txt  main.cpp
examples/main/: CMakeLists.txt  main.cpp
examples/quantize/: CMakeLists.txt  main.cpp
examples/server/: CMakeLists.txt  server.cpp
examples/swiftui/BarkCppDemo/BarkCppDemo/: BarkCppDemoApp.swift  BarkState.swift  ContentView.swift
examples/swiftui/BarkCppDemo/BarkCppDemo.xcodeproj/: project.pbxproj
examples/swiftui/BarkCppDemo/BarkCppDemo.xcodeproj/project.xcworkspace/xcuserdata/pbannier.xcuserdatad/: UserInterfaceState.xcuserstate
examples/swiftui/bark.cpp.swiftui/: LibBark.swift
examples/wasm/: CMakeLists.txt  README.md  emscripten.cpp  helpers.js  index-tmpl.html  nginx.conf
spm-headers/: bark.h  encodec.h  ggml-alloc.h  ggml-backend.h  ggml.h
tests/: CMakeLists.txt  common.cpp  common.h  test-coarse-encoder.cpp  test-fine-encoder.cpp  test-fine-gpt-eval.cpp  test-forward-coarse.cpp  test-forward-encodec.cpp  test-forward-fine.cpp  test-forward-semantic.cpp  test-gpt-eval.cpp  test-text-encoder.cpp  test-tokenizer.cpp  test_gpt_eval.cpp
