add_library(common STATIC common.cpp)
target_include_directories(common PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_compile_features(common PUBLIC cxx_std_11)

if (EMSCRIPTEN)
    add_subdirectory(wasm)
    set_target_properties(libmain PROPERTIES FOLDER "libs")
    set_target_properties(${TARGET} PROPERTIES COMPILE_FLAGS "-msimd128")
else()
    add_subdirectory(main)
    add_subdirectory(server)
    add_subdirectory(quantize)
endif()
